src/test/deca/context/invalid/created/Objet/Passe_3/IllegalFieldAffectation.deca
// Description:
//    teste l'affectation d'un type illegal à un field
// Resultats:
//    IllegalFieldAffectation.deca:9:14: Error: Illegal RValue type, got float, expected boolean

class A {
    boolean a = true;
    boolean m() {
        a = 4 * 3.3;
    }
}

{

}